Fix product zoom on mobile

--- a/wp-content/themes/sutunam/css/style.css
+++ b/wp-content/themes/sutunam/css/style.css
@@ -6903,6 +6903,7 @@ h6 {
 @media only screen and (max-width: 480px) {
   /* line 973, d:/xampp/htdocs/cozaro/wp-content/themes/sutunam/scss/page/_product-detail.scss */
 
+  .single-product .zoomContainer .panzoom,
   .single-product .zoomContainer img {
     height: 100%;
   }
