--- a/wp-content/themes/sutunam/scss/page/_product-detail.scss
+++ b/wp-content/themes/sutunam/scss/page/_product-detail.scss
@@ -970,6 +970,7 @@
             }
         }
         @include bp(max-width, $mobile) {
+            .panzoom,
             img {
                 height: 100%;
             }
